tools/tests/errors/surf_parse_02.ki
# PARSER: a class header missing the ':' before its body
class Point
    var x = 0